*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,7 @@
 	parsing/generation of fractional seconds pays attention to length of
 		value/format-string now
 	fixed a bug that caused fractional seconds to be dropped sometimes
+	odbc lazy-fetches now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
