*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,8 @@
 		value/format-string now
 	fixed a bug that caused fractional seconds to be dropped sometimes
 	odbc lazy-fetches now
+	odbc driver fakes SQLBindParameter with data-at-exec by deferring the
+		execute and buffering the data locally now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
