--- a/ChangeLog
+++ b/ChangeLog
@@ -51,6 +51,8 @@
 	bumped odbc MAX_COLUMN_COUNT to 384
 	added a mars=yes/no flag to enable MS SQL Server MARS when using the
 		odbc driver for MS SQL Server with the odbc connection module
+	ODBC SQLGetInfo(SQL_USER_NAME) gets the schema from the backend when
+		used with the odbc connection module now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
