*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -56,6 +56,7 @@
 	increased listen backlogs to 128 from 15/5
 	normalize translation doesn't remove spaces around _'s any more
 	implemented output bind null indicators properly for db2/informix
+	odbc connection supports dynamic maxcolumncount/maxfieldlength now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
