--- a/ChangeLog
+++ b/ChangeLog
@@ -57,6 +57,8 @@
 	normalize translation doesn't remove spaces around _'s any more
 	implemented output bind null indicators properly for db2/informix
 	odbc connection supports dynamic maxcolumncount/maxfieldlength now
+	fixed but that caused the results of non-tree-based query translations
+		to be concatenated
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
