--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,7 @@
 		gcc -print-multiarch doesn't return anything, but the
 		multiarch dir is necessary to find python3
 	configure script can find php-7 on openbsd now
+	node is used to run node-gyp.js now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
