*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -68,6 +68,7 @@
 		multiarch dir is necessary to find python3
 	configure script can find php-7 on openbsd now
 	node is used to run node-gyp.js now
+	configure script looks for /etc/php7 now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
