*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,7 @@
 	configure script looks for /etc/php7 now
 	configure script looks for node-gyp under
 		/usr/lib*/node_modules/nmp[6789] now
+	php pdo api uses zend_long in place of ssize_t now
 
 1.1.0 - updated to use charstring asprintf analogs
 	fixed uninitialized sendcolumninfo on server-side
