--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.2.1 - 
+1.2.1 - updated systemd init file to use SIGINT to kill sqlrelay
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
