--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
 	added \r and ; as possible after-variable characters for fake-binds
 	added -short, -connection-detail, and -query options to sqlr-status
 	added initial support for queries that return multiple result sets
+	... various odbc connection module improvements ...
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
