added parse-failed event

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
 	added -short, -connection-detail, and -query options to sqlr-status
 	added initial support for queries that return multiple result sets
 	... various odbc connection module improvements ...
+	added parse failed event
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
