added noop framework

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@
 	... various odbc connection module improvements ...
 	added parse failed event
 	updated normalize translation to remove spaces around :=
+	added noop query framework
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
