build-system changes to support directives config changes to support directives
updated tests for Oracle 12.2

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
 		allocate memory for bind variables into the
 		sqlrservercontroller and exposed it to modules
 	added docs for tls/ssl backend enc/auth
+	added directives framework
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
