added some docs implented input/output double/date binds

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@
 	added directives framework and custom_wf directive
 	pushed connect timeout parameter up
 	implemented underpinnings for input/output binds
+	made SQLGetConnectAttr(SQL_AUTOCOMMIT) not return an error
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
