fixed --disable-server bug that caused odbc api to be disabled

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,7 @@
 	pushed connect timeout parameter up
 	implemented underpinnings for input/output binds
 	made SQLGetConnectAttr(SQL_AUTOCOMMIT) not return an error
+	fixed configure bug causing --disable-server to disable the odbc api
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
