configure sets versions in vdproj files now

--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
 	implemented underpinnings for input/output binds
 	made SQLGetConnectAttr(SQL_AUTOCOMMIT) not return an error
 	fixed configure bug causing --disable-server to disable the odbc api
+	configure.vbs sets versions in vdproj files now
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
