added freetds paramter to freetds connection module
added netbsd php config type

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,9 @@
 	replaced toFloat() calls with toFloatC()
 	mysql connection module handles /* ... */ comments correctly when
 		detecting which API (stmt vs. traditional) to use now
+	added php conf type for netbsd
+	added freetds parameter to freetds connection module that sets the
+		FREETDS/FREETDSCONF environment variables
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
