fixed mysql connection "show columns odbc" bug

--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,7 @@
 	ODBC SQLTables switches to the specified catalog before getting the
 		table list now (and switches back)
 	fixed ODBC wchar truncation problem
+	fixed "show columns odbc" bug in mysql connection module
 
 1.2.0 - fixed subtle error in sqlr-import that could cause it to skip
 		empty/NULL fields
