--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-1.3.1 - ...
+1.3.1 - odbc connection module - trace=yes/no/default now instead of just yes/no
+	pushed detachbeforelogin parameter up to sqlrserverconnection class
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
