--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 1.3.1 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
+	updated to use rudiments container clearAndDelete...() methods
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
