--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 1.3.1 - odbc connection module - trace=yes/no/default now instead of just yes/no
 	pushed detachbeforelogin parameter up to sqlrserverconnection class
 	updated to use rudiments container clearAndDelete...() methods
+	fixed nonsensical uint32_t majorversion>=0 comparison in freetds conn
+	fixed nonsensical uint16_t isnull==-1 comparison in odbc conn
+	fixed return NULL in mehtod that returns false in router conn
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
