--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	fixed return NULL in method that returns false in router conn
 	added manual removal of build directory in nodejs clean target
 	updated nodejs clean target with - in front of node-gyp clean
+	fleshed out the installing-sqlrelay-from-packages doc
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
