connect string "timeout" -> "connecttimeout" in docs

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 	added manual removal of build directory in nodejs clean target
 	updated nodejs clean target with - in front of node-gyp clean
 	fleshed out the installing-sqlrelay-from-packages doc
+	connect string "timeout" -> "connecttimeout" in docs
 
 1.3.0 - updated systemd init file to use SIGINT to kill sqlrelay
 	fixed several "ocurred" -> "occurred" typo's
